--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,8 @@ $font: (head: ("Paralucent",
     sans-serif),
   mono: ("Fira Mono",
     monospace),
+  quote: ("Paralucent Condensed",
+    sans-serif),
 );
 
 // Palette.
